--- a/year/2022.md
+++ b/year/2022.md
@@ -6,7 +6,7 @@
 
 | 🗓日期     | 📌分类  | 💛详情                                                   |                            🔗链接                            | 🔨备注                                                    |
 | :-------- | :----- | :------------------------------------------------------ | :----------------------------------------------------------: | -------------------------------------------------------- |
-| 2022.1.8  | 乃木坂 | Making of MTV Unplugged - Nogizaka46                    |      [生](https://www.bilibili.com/video/bv1sr4y1z7Xx)       |                                                          |
+| 2022.1.8  | 乃木坂 | Making of MTV Unplugged - Nogizaka46                    |      [网盘](https://pan.baidu.com/s/1HOrjl0IxWmla0eiBb7eiPg?pwd=yfzj)       |                                                          |
 | 2022.1.10 | 电影   | 『行骗天下JP 英雄篇』世界首映舞台问候        |    [生](https://www.bilibili.com/video/BV1Lq4y1A7ZF) ‖ [油管](https://www.youtube.com/watch?v=L60743vhkJM)  | [行骗天下JP 英雄篇官网](https://confidenceman-movie.com) |
 | 2022.1.10 | 电影   | 特番『行骗天下JP学园　英雄篇』小手伸也先生 - 拿破仑     |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=1)     |                                                          |
 | 2022.1.11 | 杂志   | 『週刊FLASH』2022年1月25日号（1630号）                  |        [微博](https://weibo.com/5177703789/Lag0b2PiB)        |                                                          |
@@ -25,8 +25,8 @@
 | 2022.1.20 | CM     | 参天制药『Well-Wash EYE』的电视广告"给眼睛洗个澡"篇     |      [熟](https://www.bilibili.com/video/BV1B34y117Lv)       |                                                          |
 | 2022.1.21 | 新闻   | 闹钟TV-Hikakin                                          |      [生](https://www.bilibili.com/video/BV1fm4y197eA)       |                                                          |
 | 2022.1.22 | 新闻   | 闹钟TV-参天制药『Well-Wash EYE』的TVCM                  |      [熟](https://www.bilibili.com/video/BV1B34y117Lv)       |                                                          |
-| 2022.1.22 | 番组   | HikakinTV 长泽雅美桑和生田绘梨花桑突然来家里…    |  [熟](https://www.bilibili.com/video/BV1G3411j7wd) ‖ [油管](https://www.youtube.com/watch?v=Bmza5g03zzQ)      |                                                          |
-| 2022.1.22 | 番组   | HikakinGames                                 | [生](https://www.bilibili.com/video/BV1Hr4y1e755?p=3) ‖ [油管](https://www.youtube.com/watch?v=H7BzY2hsR7I)      |                                                          |
+| 2022.1.22 | 番组   | 【HikakinTV】长泽雅美桑和生田绘梨花桑突然来家里…    |  [熟](https://www.bilibili.com/video/BV1G3411j7wd) ‖ [油管](https://www.youtube.com/watch?v=Bmza5g03zzQ)      |                                                          |
+| 2022.1.22 | 番组   | 【HIKAKIN GAMES】長澤まさみ & 生田絵梨花游戏实况出道www  | [熟](https://www.bilibili.com/video/BV1W341157YR) ‖ [油管](https://www.youtube.com/watch?v=H7BzY2hsR7I)      |                                                          |
 | 2022.1.22 | 番组   | 【HIKAKIN合作】『行骗天下TV』在HIKAKIN桑的家里进行史上最小的钓鱼 | [熟](https://www.bilibili.com/video/BV1o3411V7jx/) ‖ [油管](https://www.youtube.com/watch?v=Hyx42TE6JjA)      |                                                          |
 | 2022.1.24 | 广播   | TOKYO FM『TOKYO SPEAKEASY』with 钢琴家 反田恭平         | [网盘](https://pan.baidu.com/s/1k1QTCGe1LEbjDfz9n8Y7zA?pwd=0122) |                                                          |
 | 2022.1.25 | 电影   | 【英语禁止】『行骗天下TV』小手伸也采访共演者            | [生](https://www.bilibili.com/video/av210950494) ‖ [油管](https://youtu.be/lKyaouoR-VQ?t=304)          |                                                          |
@@ -42,9 +42,10 @@
 | 2022.2.19 | 杂志   | madame FIGARO japon 2022年4月号                         |        [微博](https://weibo.com/5177703789/Lg64xnrJk)        |                                                          |
 | 2022.2.19 | 音乐   | Sound Inn "S"               |      [生](https://www.bilibili.com/video/BV1Su411Q7Wo) ‖ [网盘](https://pan.baidu.com/s/1C7XJDU_wKq-F5YgoTSacyg?pwd=0122)       |                                                          |
 | 2022.2.19 | FC     | 『ERIKA IKUTA OFFICIAL SITE』开设直播記念               |                                                              |                                                          |
-| 2022.2.28 | 电影   | 行骗天下大ヒット感謝祭                                  |                                                              |                                                          |
+| 2022.2.28 | 电影   | 【剧透注意】行骗天下TV-泪的大Hit感謝祭         |  [生](https://www.bilibili.com/video/BV1Ar4y167xt) ‖ [油管](https://www.youtube.com/watch?v=88ltoUADhQQ) |                                                          |
+| 2022.2.28 | 乃木坂  | 2012.8.13「乃木坂46 Live in Osaka ～がんばれ！今野～」         |  [生](https://www.bilibili.com/video/BV1qm4y1R7YB)  |                                                          |
 | 2022.3.7 | 番组    | 激レアさんを連れてきた。                               |                                                              |                                                          |
-| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱               |                                                              |                                                          |
+| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱               |                                                              |    [油管](https://www.youtube.com/watch?v=rluse_flW8k)                                                      |
 | 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售                        |                                                              |                                                          |
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                    |                                                              |                                                          |
 | 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                |                                                              |                                                          |
