--- a/theme/音番总结.md
+++ b/theme/音番总结.md
@@ -46,6 +46,7 @@
 | 2017.2.4   | MUSIC FAIR    | 『エメAimer』 生田絵梨花 × 山崎育三郎                        |        [生](https://www.bilibili.com/video/av8516085)        |      |
 | 2017.4.18  | Utacon        | 『One day more』                                             |       [熟](https://www.bilibili.com/video/av9942533/)        |      |
 | 2017.8.2   | FNS歌谣祭     | 『Another Day Of Sun』<br>石丸幹二 × 新妻聖子 × 生田絵梨花 × クリス・ハート × Beverly<br>  『パート・オブ・ユア・ワールド（Part of your world）』生田絵梨花 × Pf. Matt | [生](https://www.bilibili.com/video/BV11x411H7jq?p=2) <br>ー<br> [生](https://www.bilibili.com/video/BV11x411H7jq?p=3) |      |
+| 2017.9.2   | MUSIC FAIR | 『SEASONS OF LOVE』石丸幹二 × 知念里奈 × 中川晃教 × 新妻聖子 × 生田絵梨花 |      [生](https://www.bilibili.com/video/BV1Jx411s7z3)      |      |
 | 2017.9.3   | N响悠扬音乐会 | 『とびら開けて』&『輝く未来』生田絵梨花 × 津田英佑<br>『生まれてはじめて』生田絵梨花 × 新妻聖子 |      [熟](https://www.bilibili.com/video/BV1Xx411x7nA/)      |      |
 | 2017.12.6  | FNS歌谣祭     | 『ホール•ニュー•ワールド（新しい世界）』 横山だいすけ × 生田絵梨花 <br> 『もう君以外愛せない』Kinki Kids × Pf.生田絵梨花 × 宮本笑里 | [熟](https://www.bilibili.com/video/BV1TW411h7jL?t=3707.7) <br>   [熟](https://www.bilibili.com/video/BV1TW411h7jL?p=2&t=4339.4) |      |
 | 2017.12.13 | FNS歌谣祭     | 『世界が終わる夜のように』『愛していれば分かり合える』『民衆の歌』<br>生田絵梨花 × 井上芳雄 & 山崎育三郎 × 昆夏美<br> 『生まれてはじめて』生田絵梨花 × 昆夏美 | [熟](https://www.bilibili.com/video/BV1JW411a7Kb?t=5377.1)<br>ー<br>[熟](https://www.bilibili.com/video/BV1JW411a7Kb?t=6273.4) |      |
@@ -56,6 +57,7 @@
 
 | 日期🗓      | 🎊 番组名称 | 📣 详情（※歌曲名&合作歌手）                                   |                           🔗 链接                           | 备注 |
 | :--------- | :--------- | :----------------------------------------------------------- | :--------------------------------------------------------: | ---- |
+| 2018.5.5  | 闹钟TV      | 『雲になればいい』藤桜梨   | [熟](https://www.bilibili.com/video/BV1KW411G7n9) ‖ [生](https://www.bilibili.com/video/BV1NW411G7H1)  |      |
 | 2018.7.25  | FNS歌谣祭  | 『僕こそ音楽』『愛していれば分かり合える』 山崎育三郎 × 生田絵梨花 | [生](https://www.bilibili.com/video/BV14s411N7nt?t=412.2)  |      |
 | 2018.12.12 | FNS歌谣祭  | 『エメAimer』 生田絵梨花 × 城田優 『ダンスはやめられない』生田絵梨花 × 平野 綾 | [熟](https://www.bilibili.com/video/BV1ht411v7bM?t=445.0)  |      |
 | 2018.12.27 | 堂本兄弟   | 『愛のかたまり』&talk Vo.井上芳雄&KinKi Kids Pf.生田絵梨花   | [熟](https://www.bilibili.com/video/BV1pt41167pz?t=1271.4) |      |
@@ -77,6 +79,7 @@
 | 2020.7.18  | MUSIC FAIR                       | 『Perfect』                                                  | [熟](https://www.bilibili.com/video/BV1TA411v7Bs/) |      |
 | 2020.7.25  | 僕らのミュージカル<br>ソング2020 | 『In Your Hands』                                            | [熟](https://www.bilibili.com/video/BV1kZ4y1M7By/) |      |
 | 2020.9.15  | Utacon                           | 『Wake me up』生田絵梨花 × 海宝直人                          | [熟](https://www.bilibili.com/video/BV1WK411K7VF/) |      |
+| 2020.10.6  | NONSTOP!                         | 『Around The World』生田絵梨花 × 海宝直人                   | [熟](https://www.bilibili.com/video/BV1P5411L7yb) |      |
 | 2020.12.2  | FNS歌谣祭                        | 『わかれうた』德永英明 × 生田絵梨花                          | [熟](https://www.bilibili.com/video/BV1hr4y1c7HF/) |      |
 | 2020.12.9  | FNS歌谣祭                        | 『民衆の歌』生田絵梨花『愛し君へ』森山直太朗 × Pf.生田絵梨花 | [熟](https://www.bilibili.com/video/BV1VU4y147dp/) |      |
 | 2020.12.21 | CDTV                             | 『生まれてはじめて』 生田絵梨花 × 久保史緒里                 | [熟](https://www.bilibili.com/video/BV1xv41147w7/) |      |
