修改说明链接

--- a/theme/音番总结.md
+++ b/theme/音番总结.md
@@ -4,8 +4,8 @@
 
  - 本文档主要整理花花村外音乐番组的演唱曲目, 包括 solo 出演及 unit 出演部分
  - Pf. 表示钢琴伴奏为主，可能有少量合唱
- - Banana ♪zero music 全集见 [2016.4.23](https://github.com/ikuchanfans/draft/main/SONGS.md#2016) 链接
- - [2013.11.27](https://github.com/ikuchanfans/draft/main/SONGS.md#2013) 『君の名は希望』 生田絵梨花 × 佐久間正英 为单曲『バレッタ』个人PV，特别收入于本文档
+ - Banana ♪zero music 全集见 [2016.4.23](https://github.com/ikuchanfans/wiki/blob/main/theme/音番总结.md#2016) 链接
+ - [2013.11.27](https://github.com/ikuchanfans/wiki/blob/main/theme/音番总结.md#2013) 『君の名は希望』 生田絵梨花 × 佐久間正英 为单曲『バレッタ』个人PV，特别收入于本文档
  - 如提示找不到视频, 请尝试在地址栏键入回车访问, 或尝试去掉链接中"**?t=数字**"部分
  - 团体出演整理稍后
  - 欢迎补充纠错
