新增更新记录
为了便于追踪，新增了更新记录

--- a/year/2022.md
+++ b/year/2022.md
@@ -2,54 +2,60 @@
 
 2022年基本更新完毕，根据日后行程随时进行更新。
 
+## 更新记录
+
+更新记录只用写 **日期 + 标题** 就可以（标题太长可缩减一部分，活用网页快捷键 `Ctrl + F`）
+
+- **新增** →  2022.3.13 【剧透注意】行骗天下TV-泪的大Hit感謝祭
+
 ## 2022
 
-| 🗓日期     | 📌分类  | 💛详情                                                   |                            🔗链接                            | 🔨备注                                                    |
-| :-------- | :----- | :------------------------------------------------------ | :----------------------------------------------------------: | -------------------------------------------------------- |
-| 2022.1.8  | 乃木坂 | Making of MTV Unplugged - Nogizaka46                    |      [网盘](https://pan.baidu.com/s/1HOrjl0IxWmla0eiBb7eiPg?pwd=yfzj)       |                                                          |
-| 2022.1.10 | 电影   | 『行骗天下JP 英雄篇』世界首映舞台问候        |    [生](https://www.bilibili.com/video/BV1Lq4y1A7ZF) ‖ [油管](https://www.youtube.com/watch?v=L60743vhkJM)  | [行骗天下JP 英雄篇官网](https://confidenceman-movie.com) |
-| 2022.1.10 | 电影   | 特番『行骗天下JP学园　英雄篇』小手伸也先生 - 拿破仑     |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=1)     |                                                          |
-| 2022.1.11 | 杂志   | 『週刊FLASH』2022年1月25日号（1630号）                  |        [微博](https://weibo.com/5177703789/Lag0b2PiB)        |                                                          |
-| 2022.1.11 | 电影   | 特番『行骗天下JP学园　英雄篇』东出昌大先生 - 恺撒       |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=2)     |                                                          |
-| 2022.1.11 | 新闻   | 晨间新闻-行骗天下                                       |      [熟](https://www.bilibili.com/video/BV1EF411v7ed/)      |                                                          |
-| 2022.1.11 | 新闻   | 闹钟TV-行骗天下                                         |    [熟](https://www.bilibili.com/video/BV1EF411v7ed?p=2)     |                                                          |
-| 2022.1.12 | 新闻   | 闹钟TV-行骗天下CanCam                                   |      [熟](https://www.bilibili.com/video/BV1dq4y1w7Dn/)      |                                                          |
-| 2022.1.12 | 电影   | 特番『行骗天下JP学园　英雄篇』瀬戸康史先生 - 織田信長   |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=3)     |                                                          |
-| 2022.1.13 | 电影   | 特番『行骗天下JP学园　英雄篇』赤ペン瀧川先生 - 坂本龍馬 |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=4)     |                                                          |
-| 2022.1.14 | 电影   | 特番『行骗天下JP学园　英雄篇』小日向文世先生 - 圣女贞德 |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=5)     |                                                          |
-| 2022.1.14 | 电影   | 『行骗天下JP 英雄篇』上映                               |                                                              |                                                          |
-| 2022.1.14 | 番组   | 全力！脱力times                                         |      [熟](https://www.bilibili.com/video/BV1mP4y1j766)       |                                                          |
-| 2022.1.15 | 新闻   | 闹钟TV-行骗天下                                         |      [生](https://www.bilibili.com/video/BV17T4y117td)       |                                                          |
-| 2022.1.15 | 乃木坂 | 【后台镜头】为大家带来2021年最后一天的后台              |      [熟](https://www.bilibili.com/video/BV1fF411H7ct)       |                                                          |
-| 2022.1.19 | 杂志   | スポーツ報知                                            | [网盘](https://pan.baidu.com/s/1jQVUMgW3XOZFzBgsb43S6g?pwd=0122) |                                                          |
-| 2022.1.20 | CM     | 参天制药『Well-Wash EYE』的电视广告"给眼睛洗个澡"篇     |      [熟](https://www.bilibili.com/video/BV1B34y117Lv)       |                                                          |
-| 2022.1.21 | 新闻   | 闹钟TV-Hikakin                                          |      [生](https://www.bilibili.com/video/BV1fm4y197eA)       |                                                          |
-| 2022.1.22 | 新闻   | 闹钟TV-参天制药『Well-Wash EYE』的TVCM                  |      [熟](https://www.bilibili.com/video/BV1B34y117Lv)       |                                                          |
-| 2022.1.22 | 番组   | 【HikakinTV】长泽雅美桑和生田绘梨花桑突然来家里…    |  [熟](https://www.bilibili.com/video/BV1G3411j7wd) ‖ [油管](https://www.youtube.com/watch?v=Bmza5g03zzQ)      |                                                          |
-| 2022.1.22 | 番组   | 【HIKAKIN GAMES】長澤まさみ & 生田絵梨花游戏实况出道www  | [熟](https://www.bilibili.com/video/BV1W341157YR) ‖ [油管](https://www.youtube.com/watch?v=H7BzY2hsR7I)      |                                                          |
-| 2022.1.22 | 番组   | 【HIKAKIN合作】『行骗天下TV』在HIKAKIN桑的家里进行史上最小的钓鱼 | [熟](https://www.bilibili.com/video/BV1o3411V7jx/) ‖ [油管](https://www.youtube.com/watch?v=Hyx42TE6JjA)      |                                                          |
-| 2022.1.24 | 广播   | TOKYO FM『TOKYO SPEAKEASY』with 钢琴家 反田恭平         | [网盘](https://pan.baidu.com/s/1k1QTCGe1LEbjDfz9n8Y7zA?pwd=0122) |                                                          |
-| 2022.1.25 | 电影   | 【英语禁止】『行骗天下TV』小手伸也采访共演者            | [生](https://www.bilibili.com/video/av210950494) ‖ [油管](https://youtu.be/lKyaouoR-VQ?t=304)          |                                                          |
-| 2022.1.26 | 番组   | 『櫻井・有吉THE夜会』未公开talk                         |      [熟](https://www.bilibili.com/video/BV1VL4y1x7fA)       |                                                          |
-| 2022.1.27 | 番组   | 『櫻井・有吉THE夜会』本篇                               |      [熟](https://www.bilibili.com/video/BV1Ui4y1171Y/)      |                                                          |
-| 2022.2.2  | 番组   | 告诉我坂道老师！毕业·生田绘梨花编@日刊体育      | [生](https://www.bilibili.com/video/bv1e44y1n7rZ) ‖ [油管](https://www.youtube.com/watch?v=54yKhV1tY8U)      |                                                          |
-| 2022.2.8  | 番组   | 『ザ！世界仰天ニュース』 让人惊愕的新闻 生田绘梨花cut   |      [熟](https://www.bilibili.com/video/BV1FT4y1979p)       |                                                          |
-| 2022.2.10 | 杂志   | CM NOW 2022年3月号                                      | [网盘](https://pan.baidu.com/s/14-qIxIk9-wNLtL6KcHPsqw?pwd=0122) |                                                          |
-| 2022.2.10 | CM     | Apuweiser-riche品牌形象代言人就任                       | [网盘](https://pan.baidu.com/s/1hzWB_5Wj_coGXGfWF5qEKQ?pwd=0122) |                                         [Apuweiser-riche官网](https://ap-story.jp/cts/apuweiser-riche/220210_apu_catalog.html)                 |
-| 2022.2.12 | 乃木坂 | 乃木坂46 生田绘梨花毕业演唱会（for J-LODlive）  | [生](https://www.bilibili.com/video/BV1du411975e) ‖ [油管](https://www.youtube.com/watch?v=zMUkljR9Z1U)      |                                                          |
-| 2022.2.18 | 音乐   | SHIONOGI music fair2900回纪念演唱会                     |                                                              |                                                          |
-| 2022.2.18 | 电影   | 『行骗天下JP 英雄篇』making                   | [生](https://www.bilibili.com/video/BV1JY41157Vn) ‖ [油管](https://www.youtube.com/watch?v=mrW5n5Ent9U)   |                                                          |
-| 2022.2.19 | 杂志   | madame FIGARO japon 2022年4月号                         |        [微博](https://weibo.com/5177703789/Lg64xnrJk)        |                                                          |
-| 2022.2.19 | 音乐   | Sound Inn "S"               |      [生](https://www.bilibili.com/video/BV1Su411Q7Wo) ‖ [网盘](https://pan.baidu.com/s/1C7XJDU_wKq-F5YgoTSacyg?pwd=0122)       |                                                          |
-| 2022.2.19 | FC     | 『ERIKA IKUTA OFFICIAL SITE』开设直播記念               |                                                              |                                                          |
-| 2022.2.28 | 电影   | 【剧透注意】行骗天下TV-泪的大Hit感謝祭         |  [生](https://www.bilibili.com/video/BV1Ar4y167xt) ‖ [油管](https://www.youtube.com/watch?v=88ltoUADhQQ) |                                                          |
-| 2022.2.28 | 乃木坂  | 2012.8.13「乃木坂46 Live in Osaka ～がんばれ！今野～」         |  [生](https://www.bilibili.com/video/BV1qm4y1R7YB)  |                                                          |
-| 2022.3.7 | 番组    | 激レアさんを連れてきた。                               |                                                              |                                                          |
-| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱               |                                                              |    [油管](https://www.youtube.com/watch?v=rluse_flW8k)                                                      |
-| 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售                        |                                                              |                                                          |
-| 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                    |                                                              |                                                          |
-| 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                |                                                              |                                                          |
-| 2022.6.10 | 音乐剧 | 『四月は君の嘘』愛知・御園座(~6.12)                      |                                                              |                                                          |
-| 2022.6.16 | 音乐剧 | 『四月は君の嘘』兵庫県立芸術文化センター(~6.18)         |                                                              |                                                          |
-| 2022.6.25 | 音乐剧 | 『四月は君の嘘』富山・オーバードホール(~6.26)          |                                                              |                                                          |
-| 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座(~7.1)                   |                                                              |                                                          |
+| 🗓日期     | 📌分类  | 💛详情                                                        |                            🔗链接                             | 🔨备注                                                        |
+| :-------- | :----- | :----------------------------------------------------------- | :----------------------------------------------------------: | ------------------------------------------------------------ |
+| 2022.1.8  | 乃木坂 | Making of MTV Unplugged - Nogizaka46                         | [网盘](https://pan.baidu.com/s/1HOrjl0IxWmla0eiBb7eiPg?pwd=yfzj) |                                                              |
+| 2022.1.10 | 电影   | 『行骗天下JP 英雄篇』世界首映舞台问候                        | [生](https://www.bilibili.com/video/BV1Lq4y1A7ZF) ‖ [油管](https://www.youtube.com/watch?v=L60743vhkJM) | [行骗天下JP 英雄篇官网](https://confidenceman-movie.com)     |
+| 2022.1.10 | 电影   | 特番『行骗天下JP学园　英雄篇』小手伸也先生 - 拿破仑          |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=1)     |                                                              |
+| 2022.1.11 | 杂志   | 『週刊FLASH』2022年1月25日号（1630号）                       |        [微博](https://weibo.com/5177703789/Lag0b2PiB)        |                                                              |
+| 2022.1.11 | 电影   | 特番『行骗天下JP学园　英雄篇』东出昌大先生 - 恺撒            |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=2)     |                                                              |
+| 2022.1.11 | 新闻   | 晨间新闻-行骗天下                                            |      [熟](https://www.bilibili.com/video/BV1EF411v7ed/)      |                                                              |
+| 2022.1.11 | 新闻   | 闹钟TV-行骗天下                                              |    [熟](https://www.bilibili.com/video/BV1EF411v7ed?p=2)     |                                                              |
+| 2022.1.12 | 新闻   | 闹钟TV-行骗天下CanCam                                        |      [熟](https://www.bilibili.com/video/BV1dq4y1w7Dn/)      |                                                              |
+| 2022.1.12 | 电影   | 特番『行骗天下JP学园　英雄篇』瀬戸康史先生 - 織田信長        |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=3)     |                                                              |
+| 2022.1.13 | 电影   | 特番『行骗天下JP学园　英雄篇』赤ペン瀧川先生 - 坂本龍馬      |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=4)     |                                                              |
+| 2022.1.14 | 电影   | 特番『行骗天下JP学园　英雄篇』小日向文世先生 - 圣女贞德      |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=5)     |                                                              |
+| 2022.1.14 | 电影   | 『行骗天下JP 英雄篇』上映                                    |                                                              |                                                              |
+| 2022.1.14 | 番组   | 全力！脱力times                                              |      [熟](https://www.bilibili.com/video/BV1mP4y1j766)       |                                                              |
+| 2022.1.15 | 新闻   | 闹钟TV-行骗天下                                              |      [生](https://www.bilibili.com/video/BV17T4y117td)       |                                                              |
+| 2022.1.15 | 乃木坂 | 【后台镜头】为大家带来2021年最后一天的后台                   |      [熟](https://www.bilibili.com/video/BV1fF411H7ct)       |                                                              |
+| 2022.1.19 | 杂志   | スポーツ報知                                                 | [网盘](https://pan.baidu.com/s/1jQVUMgW3XOZFzBgsb43S6g?pwd=0122) |                                                              |
+| 2022.1.20 | CM     | 参天制药『Well-Wash EYE』的电视广告"给眼睛洗个澡"篇          |      [熟](https://www.bilibili.com/video/BV1B34y117Lv)       |                                                              |
+| 2022.1.21 | 新闻   | 闹钟TV-Hikakin                                               |      [生](https://www.bilibili.com/video/BV1fm4y197eA)       |                                                              |
+| 2022.1.22 | 新闻   | 闹钟TV-参天制药『Well-Wash EYE』的TVCM                       |      [熟](https://www.bilibili.com/video/BV1B34y117Lv)       |                                                              |
+| 2022.1.22 | 番组   | 【HikakinTV】长泽雅美桑和生田绘梨花桑突然来家里…             | [熟](https://www.bilibili.com/video/BV1G3411j7wd) ‖ [油管](https://www.youtube.com/watch?v=Bmza5g03zzQ) |                                                              |
+| 2022.1.22 | 番组   | 【HIKAKIN GAMES】長澤まさみ & 生田絵梨花游戏实况出道www      | [熟](https://www.bilibili.com/video/BV1W341157YR) ‖ [油管](https://www.youtube.com/watch?v=H7BzY2hsR7I) |                                                              |
+| 2022.1.22 | 番组   | 【HIKAKIN合作】『行骗天下TV』在HIKAKIN桑的家里进行史上最小的钓鱼 | [熟](https://www.bilibili.com/video/BV1o3411V7jx/) ‖ [油管](https://www.youtube.com/watch?v=Hyx42TE6JjA) |                                                              |
+| 2022.1.24 | 广播   | TOKYO FM『TOKYO SPEAKEASY』with 钢琴家 反田恭平              | [网盘](https://pan.baidu.com/s/1k1QTCGe1LEbjDfz9n8Y7zA?pwd=0122) |                                                              |
+| 2022.1.25 | 电影   | 【英语禁止】『行骗天下TV』小手伸也采访共演者                 | [生](https://www.bilibili.com/video/av210950494) ‖ [油管](https://youtu.be/lKyaouoR-VQ?t=304) |                                                              |
+| 2022.1.26 | 番组   | 『櫻井・有吉THE夜会』未公开talk                              |      [熟](https://www.bilibili.com/video/BV1VL4y1x7fA)       |                                                              |
+| 2022.1.27 | 番组   | 『櫻井・有吉THE夜会』本篇                                    |      [熟](https://www.bilibili.com/video/BV1Ui4y1171Y/)      |                                                              |
+| 2022.2.2  | 番组   | 告诉我坂道老师！毕业·生田绘梨花编@日刊体育                   | [生](https://www.bilibili.com/video/bv1e44y1n7rZ) ‖ [油管](https://www.youtube.com/watch?v=54yKhV1tY8U) |                                                              |
+| 2022.2.8  | 番组   | 『ザ！世界仰天ニュース』 让人惊愕的新闻 生田绘梨花cut        |      [熟](https://www.bilibili.com/video/BV1FT4y1979p)       |                                                              |
+| 2022.2.10 | 杂志   | CM NOW 2022年3月号                                           | [网盘](https://pan.baidu.com/s/14-qIxIk9-wNLtL6KcHPsqw?pwd=0122) |                                                              |
+| 2022.2.10 | CM     | Apuweiser-riche品牌形象代言人就任                            | [网盘](https://pan.baidu.com/s/1hzWB_5Wj_coGXGfWF5qEKQ?pwd=0122) | [Apuweiser-riche官网](https://ap-story.jp/cts/apuweiser-riche/220210_apu_catalog.html) |
+| 2022.2.12 | 乃木坂 | 乃木坂46 生田绘梨花毕业演唱会（for J-LODlive）               | [生](https://www.bilibili.com/video/BV1du411975e) ‖ [油管](https://www.youtube.com/watch?v=zMUkljR9Z1U) |                                                              |
+| 2022.2.18 | 音乐   | SHIONOGI music fair2900回纪念演唱会                          |                                                              |                                                              |
+| 2022.2.18 | 电影   | 『行骗天下JP 英雄篇』making                                  | [生](https://www.bilibili.com/video/BV1JY41157Vn) ‖ [油管](https://www.youtube.com/watch?v=mrW5n5Ent9U) |                                                              |
+| 2022.2.19 | 杂志   | madame FIGARO japon 2022年4月号                              |        [微博](https://weibo.com/5177703789/Lg64xnrJk)        |                                                              |
+| 2022.2.19 | 音乐   | Sound Inn "S"                                                | [生](https://www.bilibili.com/video/BV1Su411Q7Wo) ‖ [网盘](https://pan.baidu.com/s/1C7XJDU_wKq-F5YgoTSacyg?pwd=0122) |                                                              |
+| 2022.2.19 | FC     | 『ERIKA IKUTA OFFICIAL SITE』开设直播記念                    |                                                              |                                                              |
+| 2022.2.28 | 电影   | 【剧透注意】行骗天下TV-泪的大Hit感謝祭                       | [生](https://www.bilibili.com/video/BV1Ar4y167xt) ‖ [油管](https://www.youtube.com/watch?v=88ltoUADhQQ) |                                                              |
+| 2022.2.28 | 乃木坂 | 2012.8.13「乃木坂46 Live in Osaka ～がんばれ！今野～」       |      [生](https://www.bilibili.com/video/BV1qm4y1R7YB)       |                                                              |
+| 2022.3.7  | 番组   | 激レアさんを連れてきた。                                     |                                                              |                                                              |
+| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱                    |                                                              | [油管](https://www.youtube.com/watch?v=rluse_flW8k)          |
+| 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售                             |                                                              |                                                              |
+| 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                                                              |
+| 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                     |                                                              |                                                              |
+| 2022.6.10 | 音乐剧 | 『四月は君の嘘』愛知・御園座(~6.12)                          |                                                              |                                                              |
+| 2022.6.16 | 音乐剧 | 『四月は君の嘘』兵庫県立芸術文化センター(~6.18)              |                                                              |                                                              |
+| 2022.6.25 | 音乐剧 | 『四月は君の嘘』富山・オーバードホール(~6.26)                |                                                              |                                                              |
+| 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座(~7.1)                           |                                                              |                                                              |
