--- a/year/2022.md
+++ b/year/2022.md
@@ -4,9 +4,14 @@
 
 ## 更新记录
 
-更新记录只用写 **日期 + 标题** 就可以（标题太长可缩减一部分，活用网页快捷键 `Ctrl + F`）
+更新记录只用写 **日期 + 标题** + **简易说明** 就可以（标题太长可缩减一部分，活用网页快捷键 `Ctrl + F`）
 
-- **新增** →  2022.3.13 【剧透注意】行骗天下TV-泪的大Hit感謝祭
+- **新增** 
+  - **2022.1.8**	→		Making of MTV Unplugged - 替换为熟肉网盘
+  - **2022.1.22**	→		【HIKAKIN GAMES】- 熟肉链接
+  - **2022.2.28**	→		行骗天下TV-泪的大Hit感謝祭 
+  - **2022.2.28**	→		2012.8.13「乃木坂46 Live in Osaka ～がんばれ！今野～」 
+  - **2022.3.13**	→		生田絵梨花の乱
 
 ## 2022
 
