--- a/year/2022.md
+++ b/year/2022.md
@@ -56,6 +56,7 @@
 | 2022.2.28 | 电影   | 【剧透注意】行骗天下TV-泪的大Hit感謝祭                       | [生](https://www.bilibili.com/video/BV1Ar4y167xt) ‖ [油管](https://www.youtube.com/watch?v=88ltoUADhQQ) |                                                              |
 | 2022.2.28 | 乃木坂 | 2012.8.13「乃木坂46 Live in Osaka ～がんばれ！今野～」       |      [生](https://www.bilibili.com/video/BV1qm4y1R7YB)       |                                                              |
 | 2022.3.7  | 番组   | 激レアさんを連れてきた。                                     |                                                              |                                                              |
+| 2022.3.7  | 番组   | プレミアの巣窟＜Mナイト＞                                     |                                                              |                                                              |
 | 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱                    |                                                              | [油管](https://www.youtube.com/watch?v=rluse_flW8k)          |
 | 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售                             |                                                              |                                                              |
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                                                              |
