--- a/theme/音番总结.md
+++ b/theme/音番总结.md
@@ -45,10 +45,10 @@
 | :--------- | :------------ | :----------------------------------------------------------- | :----------------------------------------------------------: | ---- |
 | 2017.2.4   | MUSIC FAIR    | 『エメAimer』 生田絵梨花 × 山崎育三郎                        |        [生](https://www.bilibili.com/video/av8516085)        |      |
 | 2017.4.18  | Utacon        | 『One day more』                                             |       [熟](https://www.bilibili.com/video/av9942533/)        |      |
-| 2017.8.2   | FNS歌谣祭     | 『Another Day Of Sun』<br>石丸幹二 × 新妻聖子 × 生田絵梨花 × クリス・ハート × Beverly<br>  『パート・オブ・ユア・ワールド（Part of your world）』生田絵梨花 × Pf. Matt | [生](https://www.bilibili.com/video/BV11x411H7jq?p=2) <br>ー<br> [生](https://www.bilibili.com/video/BV11x411H7jq?p=3) |      |
+| 2017.8.2   | FNS歌谣祭     | 『Another Day Of Sun』<br>石丸幹二 × 新妻聖子 × 生田絵梨花 × クリス・ハート × Beverly<br>  『パート・オブ・ユア・ワールド（Part of your world）』生田絵梨花 × Pf. Matt | [熟](https://www.bilibili.com/video/BV1mx411H7Jy) <br>ー<br> [熟](https://www.bilibili.com/video/BV1mx411H7Ui) |      |
 | 2017.9.2   | MUSIC FAIR | 『ONE』石丸幹二×知念里奈×中川晃教×新妻聖子×生田絵梨花<br> 『TOMORROW』生田絵梨花『愛していれば分かり合える』中川晃教×生田絵梨花<br>『SEASONS OF LOVE』石丸幹二×知念里奈×中川晃教×新妻聖子×生田絵梨花  |      [生](https://www.bilibili.com/video/BV1Fx411b7ix)      |      |
 | 2017.9.3   | N响悠扬音乐会 | 『とびら開けて』&『輝く未来』生田絵梨花 × 津田英佑<br>『生まれてはじめて』生田絵梨花 × 新妻聖子 |      [熟](https://www.bilibili.com/video/BV1Xx411x7nA/)      |      |
-| 2017.12.5 | とくダネ | 『翼をください』生田絵梨花 × 海宝直人                              |      [生](https://www.bilibili.com/video/BV1GW411Y7sm)       |      |
+| 2017.12.5 | とくダネ | 『翼をください』生田絵梨花 × 海宝直人                              |      [熟](https://www.bilibili.com/video/BV1tW411Y7a7)       |      |
 | 2017.12.6  | FNS歌谣祭     | 『ホール•ニュー•ワールド（新しい世界）』 横山だいすけ × 生田絵梨花 <br> 『もう君以外愛せない』Kinki Kids × Pf.生田絵梨花 × 宮本笑里 | [熟](https://www.bilibili.com/video/BV1TW411h7jL?t=3707.7) <br>   [熟](https://www.bilibili.com/video/BV1TW411h7jL?p=2&t=4339.4) |      |
 | 2017.12.13 | FNS歌谣祭     | 『世界が終わる夜のように』『愛していれば分かり合える』『民衆の歌』<br>生田絵梨花 × 井上芳雄 & 山崎育三郎 × 昆夏美<br> 『生まれてはじめて』生田絵梨花 × 昆夏美 | [熟](https://www.bilibili.com/video/BV1JW411a7Kb?t=5377.1)<br>ー<br>[熟](https://www.bilibili.com/video/BV1JW411a7Kb?t=6273.4) |      |
 | 2017.12.25 | MTV Unplugged | 『MTV Unplugged - ERIKA IKUTA』                              |      [熟](https://www.bilibili.com/video/BV1dW411t7VQ)       |      |
