--- a/theme/音番总结.md
+++ b/theme/音番总结.md
@@ -51,7 +51,7 @@
 | 2017.12.5 | とくダネ | 『翼をください』生田絵梨花 × 海宝直人                              |      [熟](https://www.bilibili.com/video/BV1tW411Y7a7)       |      |
 | 2017.12.6  | FNS歌谣祭     | 『ホール•ニュー•ワールド（新しい世界）』 横山だいすけ × 生田絵梨花 <br> 『もう君以外愛せない』Kinki Kids × Pf.生田絵梨花 × 宮本笑里 | [熟](https://www.bilibili.com/video/BV1TW411h7jL?t=3707.7) <br>   [熟](https://www.bilibili.com/video/BV1TW411h7jL?p=2&t=4339.4) |      |
 | 2017.12.13 | FNS歌谣祭     | 『世界が終わる夜のように』『愛していれば分かり合える』『民衆の歌』<br>生田絵梨花 × 井上芳雄 & 山崎育三郎 × 昆夏美<br> 『生まれてはじめて』生田絵梨花 × 昆夏美 | [熟](https://www.bilibili.com/video/BV1JW411a7Kb?t=5377.1)<br>ー<br>[熟](https://www.bilibili.com/video/BV1JW411a7Kb?t=6273.4) |      |
-| 2017.12.25 | MTV Unplugged | 『MTV Unplugged - ERIKA IKUTA』                              |      [熟](https://www.bilibili.com/video/BV1dW411t7VQ)       |      |
+| 2017.12.25 | MTV Unplugged | 『MTV Unplugged - ERIKA IKUTA』                              |      [熟](https://www.bilibili.com/video/BV1dW411t7VQ)       |   [Encore](https://pan.baidu.com/s/1YOo9v0OAgguAbm0txC9BaQ?pwd=0122)   |
 
 
 ## 2018
