常规更新3月相关资源&行程
主要是MUSIC FAIR

--- a/year/2022.md
+++ b/year/2022.md
@@ -2,6 +2,8 @@
 
 2022年基本更新完毕，根据日后行程随时进行更新。
 
+- 未播出**详情**里会写出一些节目的**具体播出**时间，等**播出之后**会转移到**备注**。
+
 ## 更新记录
 
 更新记录只用写 **日期 + 标题** + **简易说明** 就可以（标题太长可缩减一部分，活用网页快捷键 `Ctrl + F`）
@@ -12,6 +14,7 @@
   - **2022.2.28**	→		行骗天下TV-泪的大Hit感謝祭 
   - **2022.2.28**	→		2012.8.13「乃木坂46 Live in Osaka ～がんばれ！今野～」 
   - **2022.3.13**	→		生田絵梨花の乱
+  - **2022.3.5/3.19/3.26**  	→		MUSIC FAIR 相关
 
 ## 2022
 
@@ -55,11 +58,13 @@
 | 2022.2.19 | FC     | 『ERIKA IKUTA OFFICIAL SITE』开设直播記念                    |                                                              |                                                              |
 | 2022.2.28 | 电影   | 【剧透注意】行骗天下TV-泪的大Hit感謝祭                       | [生](https://www.bilibili.com/video/BV1Ar4y167xt) ‖ [油管](https://www.youtube.com/watch?v=88ltoUADhQQ) |                                                              |
 | 2022.2.28 | 乃木坂 | 2012.8.13「乃木坂46 Live in Osaka ～がんばれ！今野～」       |      [生](https://www.bilibili.com/video/BV1qm4y1R7YB)       |                                                              |
-| 2022.3.5  | 音乐   | music fair 18:00～                                     |                                                              |                                                              |
-| 2022.3.7  | 番组   | 激レアさんを連れてきた。23:15～                                     |                                                              |                                                              |
-| 2022.3.7  | 番组   | プレミアの巣窟＜Mナイト＞  25:50～                                   |                                                              |                                                              |
-| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜                  |                                                              | [油管](https://www.youtube.com/watch?v=rluse_flW8k)          |
-| 2022.3.17 | 番组 | 千鳥のクセがスゴいネタGP     21:00～                        |                                                              |                                                              |
+| 2022.3.5  | 音乐   | 富士台 MUSIC FAIR   18:00～<br>【卒業ソングメドレー】  「卒業写真」「旅立ちの日に」生田絵梨花 × Little Glee Monster |                                                              | [MF 2900回纪念官网 ](https://www.fujitv.co.jp/MUSICFAIR/viewing_2021/recording.html) |
+| 2022.3.7  | 番组   | 激レアさんを連れてきた。23:15～                              |                                                              |                                                              |
+| 2022.3.7  | 番组   | プレミアの巣窟＜Mナイト＞  25:50～                           |                                                              |                                                              |
+| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜           |                                                              | [油管](https://www.youtube.com/watch?v=rluse_flW8k)          |
+| 2022.3.17 | 番组   | 千鳥のクセがスゴいネタGP     21:00～                         |                                                              |                                                              |
+| 2022.3.19 | 音乐   | 富士台 MUSIC FAIR   18:00～<br>「愛していれば分かり合える」山崎育三郎 × 生田絵梨花 |                                                              |                                                              |
+| 2022.3.26 | 音乐   | 富士台 MUSIC FAIR   18:00～<br/>「オン・マイ・オウン」生田絵梨花 |                                                              |                                                              |
 | 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售                             |                                                              |                                                              |
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                                                              |
 | 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                     |                                                              |                                                              |
