--- a/year/2022.md
+++ b/year/2022.md
@@ -63,6 +63,7 @@
 | 2022.3.7  | 番组   | プレミアの巣窟＜Mナイト＞  25:50～                           |                                                              |                                                              |
 | 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜           |                                                              | [油管](https://www.youtube.com/watch?v=rluse_flW8k)          |
 | 2022.3.17 | 番组   | 千鳥のクセがスゴいネタGP     21:00～                         |                                                              |                                                              |
+| 2022.3.18 | 番组   | ネタパレ70分SP                        |                                                              |                                                              |
 | 2022.3.19 | 音乐   | 富士台 MUSIC FAIR   18:00～<br>「愛していれば分かり合える」山崎育三郎 × 生田絵梨花 |                                                              |                                                              |
 | 2022.3.26 | 音乐   | 富士台 MUSIC FAIR   18:00～<br/>「オン・マイ・オウン」生田絵梨花 |                                                              |                                                              |
 | 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售                             |                                                              |                                                              |
